SERVER-30849 _handleARMResultsCallback needs to hold mutex while accessing member variables